--- a/config/locales/photos.yml
+++ b/config/locales/photos.yml
@@ -1,12 +1,18 @@
 en:
   photos: 
-    all: frogs , highview , peony
-    frogs: Dancing frogs
-    highview: Villa Taika from above 
-    peony: Lovely flowers in the garden 
+    all: w_frogs , w_highview , w_peony , h_aurinko_wc , h_curves , h_lootus_wc 
+    w_frogs: Dancing frogs
+    w_highview: Villa Taika from above
+    w_peony: Fountain in the garden
+    h_aurinko_wc: Aurinko wc
+    h_curves: Aurinko carvings
+    h_lootus_wc: Lootus WC
 fi:
   photos: 
-    frogs: Sammakot
-    highview: Villa Taika kokeasta 
-    peony: Lovely flowers in the garden 
+    w_frogs: Sammakot
+    w_highview: Villa Taika kokealta
+    w_peony: Kukkat putharassa
+    h_aurinko_wc: Aurinko wc
+    h_curves: Aurinko carvings
+    h_lootus_wc: Lootus WC
     
