--- a/config/locales/standard.yml
+++ b/config/locales/standard.yml
@@ -1,13 +1,13 @@
 # translation for "standard" rooms,  all rooms have short , full and price
 en:
   rose:
-    short: Roose room
+    short: Rose room
     full: The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br>
           It has a double bed and a cosy sofa for two. <br>
           It shares a toilet and shower with the next door Sky room. <br>
           Together with the sky room it is an ideal choice for large families or small groups up to five, as 
           both rooms with their bathroom form an apartment.<br>
-          The price for two is 75€.
+          The price for two is 75€/ Sinle 60€
   sky:
     short: Sky room
     full: The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br>
@@ -15,16 +15,18 @@ en:
            Together with the sky room it is an ideal choice for large families or small groups up to five, as 
            both rooms with their bathroom form an apartment.<br>
            There is a double bed, and space for an extra bed on request. <br>
-           The price for two is 75€.
+           The price for two is 75€/ Single 60€
   
 fi:
   rose:
     short: Ruusu huone 
-    full: <b>Ruusu huone </b>on romanttinen huone. Huoneessa on parisänky, ja COSY sohva.  
-            Sillä on yhteinen wc ja suihku Taivas huoneen kanssa.
-          Hinta on 75€ /2hh
+    full: <b>Ruusu huone </b>on romanttinen huone. Huoneessa on parisänky, ja mukava sohva.  
+            Sillä on yhteinen wc ja suihku viereisen Taivas huoneen kanssa.<br>
+            Yhdessä Taivas huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br> 
+          Hinta on 75€ /2hh ja 60€/1hh
   sky:
     short: Taivas huone 
-    full: <b>Taivas huone </b>on viehkeä huone. Sillä on yhteinen wc ja suihku Ruusu huoneen vieressa.  
-          Huoneessa on parisänky, ja siellä on lisävuode jo valmiina. 
-          Hinta on 75€ /2hh
+    full: <b>Taivas huone </b>on rauhoittava ja  viehkeä huone. Sillä on yhteinen wc ja suihku viereisen Ruusu huoneen kanssa.  
+          Huoneessa on parisänky, ja sinne saa lisävuoteen tai kaksi tarvittaessa..
+          Yhdessä Ruusu huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br>  
+          Hinta on 75€ /2hh ja 60€/ 1hh
