--- a/config/locales/news.yml
+++ b/config/locales/news.yml
@@ -5,7 +5,7 @@ en:
     all: deco , eco
     short: News
     deco: 
-        short: Redecorating and refurbishing for the new season
+        short: Affordable accommodation in redocorated granery
         rest: Ulko aitassamme on edullinen majoitusvaihtoehto 60€/ 2hh. Huone on tyylikäs ja tunnelmallinen. <br>
               Perinteisen kauniin hirsi seinän kanssa on kultainen pylvässänky. Huoneeseen mahtuu 2 hlöä.
              Suihku ja wc ovat päärakennuksessa. Halutessasi voit käyttää biologista, kemiallista wc:tä 
