--- a/config/locales/photos.yml
+++ b/config/locales/photos.yml
@@ -6,15 +6,15 @@ en:
     w_terasse: Garden terasse
     h_aurinko_wc: Aurinko wc
     h_curves: Aurinko carvings
-    h_lootus_wc: Lootus WC
+    h_lootus_wc: Lotus suite toilet
     h_highview: Villa Taika from above
 fi:
   photos: 
-    w_frogs: Sammakot
+    w_frogs:Tanssivat  sammakot
     w_terasse: Terassi
-    w_peony: Kukkat putharassa
+    w_peony: Suihkulähde
     h_aurinko_wc: Aurinko wc
-    h_curves: Aurinko carvings
+    h_curves: Aurinko sviitin kaiverrukset
     h_lootus_wc: Lootus WC
     h_highview: Villa Taika korkealta
     
