--- a/config/locales/news.yml
+++ b/config/locales/news.yml
@@ -6,9 +6,9 @@ en:
     short: News
     deco: 
         short: Affordable accommodation in redocorated granery
-        rest: Ulko aitassamme on edullinen majoitusvaihtoehto 60€/ 2hh. Huone on tyylikäs ja tunnelmallinen. <br>
-              Perinteisen kauniin hirsi seinän kanssa on kultainen pylvässänky. Huoneeseen mahtuu 2 hlöä.
-             Suihku ja wc ovat päärakennuksessa. Halutessasi voit käyttää biologista, kemiallista wc:tä 
+        rest: On the yard we have room granary 60€/ 2hh. Room is traditionally decorated. <br>
+              Traditional log cabin that is decorated with afour poster bed. two peple can sleep in it.
+             Shower and toilet are in the main building.
         image: renovate
     eco: 
       short: Ecological energy. 
