--- a/config/locales/groups.yml
+++ b/config/locales/groups.yml
@@ -55,4 +55,61 @@ fi:
           Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. 
           Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. 
           Ota yhteyttä!
+de:
+  groups: 
+    short: Groups
+    right: In many ways Villa Taika is well suited to accomodate courses and other group happenings.<br><br>
+          <ul> 
+            <li> large group room</li>
+            <li> large garden</li>
+            <li> high quality sound + video</li>
+            <li> blankets and cushions</li>
+            <li> wood heated sauna + pool</li>
+            <li> accomodate 20-30 people</li>
+            <li> extra teacher room</li>
+            <li> nearby activities</li>
+            <li> vegetarian food</li>
+          </ul>
+    bottom: 
+      Our beautifully decorated group space has a good size to allow many activities with enough space, be it
+      yoga, dancing, body work or other group work. <br>
+      Our garden is large and open, and well suited for quiet activities . <br>
+      The group space is also well equipped with a high quality steoro system and a video projector is 
+      available if needed. <br>
+      For quiet group work we have blankets and sitting cousions for participants. <br>
+      During courses it is possible to use our large, wood heated sauna, and our small pool. <br>
+      On the courses we can accomodate 25 people comfortably in our 8 rooms, but up to 30 is possible using
+      extra beds, and we also have a seperate room for the teacher<br>
+      There are many local activities for groups that are not courses, see our <a href="/en/activities.html">activities
+      page</a>. <br>
+      We offer vegetarian or vegan food, prepared with love. <br>
+      Prices and details subject to negotiation. Full board prices with use of group room and sauna range 
+      from 50-65€, with prices depending on group size and food requirements. <br> <br>
+se:
+  groups: 
+    short: Ryhmille
+    right: 
+           <ul> 
+            <li>iso ryhmätila</li>
+            <li> iso puutarha</li>
+            <li> korkealuokkaiset äänentoisto laitteet</li>
+            <li> videotykki</li>
+            <li istuintyynyjä ja peittoja salissa</li>
+            <li> puulämmitteinen sauna</li>
+            <li>  majoitus 20-30 hlö</li>
+            <li>opettajalle oma huone</li>
+            <li>kasvisruoka</li>
+           </ul>
+    bottom:       Ryhmätila on 75 m2. Kauniisti sisustettu ryhmätilamme sopii joogaan, tanssiin, kehotyöskentelyyn etc.  <br>
+          Voimme majoittaa 25 ihmistä mukavasti 8:aan huoneeseemme, mutta tarvittaessa 30 mahtuu lisävuoteisiimme.<br>
+          Ryhmätilaa on mahdollista käyttää myös majoitukseen.<br>
+          ryhmätilassa on korkealuokkaiset äänentoisto laitteet ja videotykki tarvittaessa.<br>
+          Tarjoamme täysipainoista kasvisruokaa, joka on valmistettu rakkaudella..<br>
+          Pihamme on iso ja avoin. Sitä voi käyttää hiljaisiin ryhmäharjoituksiin.<br>
+          Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.<br>
+          Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-65€, riippuen ryhmän koosta ja ruokatoiveista.<br>
+    
+          Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. 
+          Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. 
+          Ota yhteyttä!
   
