--- a/config/locales/rooms.yml
+++ b/config/locales/rooms.yml
@@ -41,4 +41,47 @@ fi:
     suites: 3 sviittiä omalla suihkulla 85/90/95
     deluxe: 2 huonetta omalla wc:llä (yläkerrassa) 75€/2hh ja 60€/1hh 
     standard: 2 huonetta, jotka jakavat yhteisen suihkun, 75€/2hh ja 60€/1hh
+de:
+  bed:
+    rooms: Rooms
+    short: Bed & Breakfast
+    one:
+        Welcome to the charming and peaceful Villa Taika! <br>
+        We have created unique B&B, with 8 individually decorated rooms.
+        Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the 
+        pieces of furniture, that we selected to our rooms. <br> 
+        We hope you will be revitalisedand rested in the beauty of our surroundings! <br>
+
+        In the backyard we have a garden with the pond and waterfall.
+        You can relax in the garden by listening to the soothing sound of the water or make trips to the 
+        nearby tourist sights.
+        The Billnäs 15km, Mustio castle 15km, beautiful towns of Tammisaari 35 km and Hanko 65km
+    two:
+        The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br>
+        The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br>  
+        You can sign into your room between 14-19 . Please let us know what time
+        you'll be arriving! <br>
+        Checkout by 12 o'clock 
+    suites: 3 suites with own shower 85-95 €
+    deluxe: 2 rooms with toilet ensuite 75€
+    standard: 2 rooms which share one shower 75€
+se:
+  bed:
+    rooms: Huoneet
+    short: Bed & Breakfast
+    one: Tervetuloa viehättävään Villa Taikaan! <br>Olemme luoneet B&B;n, jossa jokainen huone on uniikisti sisustettu. <br> 
+        Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. 
+        Valitsimme huoneisiimme yksilölliset huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. <br> 
+        Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa! <br>Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit
+        nauttia olostasi vesiputouksen solinaa kuunnellen. <br> 
+        <br> Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.<br>Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, Tammisaari 35km.
+    two:
+        Huoneen hinta on kahdelle ja lisävuode on 25€. 
+        Huoneen hintaan kuuluu aamupala (tarjoillaan klo 8:30-10:00), liinavaatteet ja pyyhkeet. 
+        Huoneiden hinnat ovat 75-95 € .
+        Voimme majoittaa jopa 25-30 hengen ryhmän.
+        Peruutus on tehtävä 48h ennen .
+    suites: 3 sviittiä omalla suihkulla 85/90/95
+    deluxe: 2 huonetta omalla wc:llä (yläkerrassa) 75€/2hh ja 60€/1hh 
+    standard: 2 huonetta, jotka jakavat yhteisen suihkun, 75€/2hh ja 60€/1hh
     
